fixed delete button on mobile responsive

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -79,7 +79,7 @@ h4 {
     box-shadow: 0px 3px 8px rgba(0, 0, 0, .5);
 }
 
-#empty {
+.empty {
     margin: 0px;
     padding: 6px;
     font-size: 12pt;
@@ -87,6 +87,12 @@ h4 {
     color: white;
     background-color: #4e84c4;
     border: #0347bb solid 1px;
+    line-height: 1.42857143;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    touch-action: manipulation;
+    border-radius: 4px;
     box-shadow: 0px 3px 8px rgba(0, 0, 0, .5);
 }
 
